Add rfid authentication
