# openapi.yaml
@@ -422,9 +422,6 @@ paths:
           application/json: 
             schema: 
               type: object
-              required: 
-                - username
-                - password
               properties: 
                 username: 
                   type: string
@@ -432,6 +429,9 @@ paths:
                 password: 
                   type: string
                   example: hunter2
+                rfid:
+                  type: string
+                  example: 1a3b3c7d
   /api/v1/admin/authenticate: 
     post: 
       summary: Authenticate with admin privileges
@@ -914,6 +914,33 @@ paths:
           '$ref': '#/components/responses/NotAuthorizedErrorResponse'
         404:
           '$ref': '#/components/responses/NotFoundErrorResponse'
+  /api/v1/user/changeRfid:
+    post:
+      summary: Change the account's rfid
+      operationId: changeRfid
+      tags:
+        - normal
+      security:
+        - normalAccessToken: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - rfid
+              properties:
+                password:
+                  type: string
+                  example: a1b3c3d7
+      responses:
+        204:
+          description: Rfid changed successfully
+        400:
+          '$ref': '#/components/responses/BadRequestErrorResponse'
+        401:
+          '$ref': '#/components/responses/NotAuthorizedErrorResponse'
   /api/v1/user/changePassword:
     post:
       summary: Change the account's password
